--- a/Medical_Cost_Personal.ipynb
+++ b/Medical_Cost_Personal.ipynb
@@ -82,7 +82,7 @@
         "#Fit column transformer to out training data\n",
         "ct.fit(X_train)\n",
         "\n",
-        "#Transform training and test data with normalization (MinMaxScalar)\n",
+        "#Transform training and test data with normalization (Standard)\n",
         "\n",
         "X_train_normal = ct.transform(X_train)\n",
         "X_test_normal = ct.transform(X_test)\n",
