--- a/Medical_Cost_Personal.ipynb
+++ b/Medical_Cost_Personal.ipynb
@@ -68,7 +68,7 @@
         "\n",
         "#Create a coloumn transformer\n",
         "ct = make_column_transformer(\n",
-        "    (StandardScaler(),[\"age\",\"bmi\",\"children\"]),#Turn the values between -3 and 3\n",
+        "    (StandardScaler(),[\"age\",\"bmi\",\"children\"]),",
         "    (OneHotEncoder(handle_unknown=\"ignore\"),[\"sex\",\"smoker\",\"region\"])\n",
         "    )\n",
         "#Create X and Y\n",
